# cads-api-client

./: .buildinfo  .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.html  README.md  Traceability_Configuration.ipynb  architecture.md  draft_mock_request_test.py__  environment-minver.yml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  test_data.nc
.github/workflows/: on-push.yml
_api/cads_api_client/: ApiClient.html  Collection.html  Collections.html  Jobs.html  Process.html  Processes.html  Remote.html  Results.html  index.html
_sources/_api/cads_api_client/: ApiClient.rst.txt  Collection.rst.txt  Collections.rst.txt  Jobs.rst.txt  Process.rst.txt  Processes.rst.txt  Remote.rst.txt  Results.rst.txt  index.rst.txt
_static/: documentation_options.js
cads_api_client/: __init__.py  api_client.py  api_response.py  catalogue.py  config.py  jobs.py  legacy_api_client.py  legacy_client.py  multi_request.py  multi_request_script.py  multi_retrieve.py  processes.py  processing.py  profile.py  settings.py  utils.py
ci/: environment-ci.yml
docs/: conf.py  index.md
doctrees/: environment.pickle  index.doctree
doctrees/_api/cads_api_client/: index.doctree
html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/_api/cads_api_client/: index.html
html/_sources/: index.md.txt
html/_sources/_api/cads_api_client/: index.rst.txt
html/_static/: documentation_options.js
notebook/: cads_api_client_test.ipynb
notebooks/: cads_api_client_test-Copy1.ipynb  cads_api_client_test-Copy2.ipynb  cads_api_client_test.ipynb  cads_api_constraints_test.ipynb  cads_api_filters_and_pagination_tests.ipynb  cads_api_licences_tests.ipynb  cads_api_multi_request.py  cads_api_multi_request_test.py  multi-request-1-status.py  multi-request-2-wait_on_result.py  multi-request.json  multi_request_script.py  test01.grib.923a8.idx
tests/: _test_10_processing.py_  conftest.py  integration_test_10_catalogue.py  integration_test_20_processing.py  integration_test_30_remote.py  integration_test_40_api_client.py  integration_test_40_legacy_api_client.py  integration_test_40_results.py  integration_test_41_remote.py  integration_test_42_results.py  integration_test_43_collection.py  integration_test_50_legacy_api_client.py  integration_test_50_profile.py  integration_test_60_api_client.py  integration_test_60_features.py  integration_test_60_observations.py  integration_test_60_real_datasets.py  integration_test_70_legacy_api_client.py  integration_test_70_real_datasets.py  integration_test_80_adaptors.py  integration_test_90_features.py  test_00_version.py  test_10_config.py  test_10_processing.py  test_20_results.py  test_20_settings.py  test_40_results.py
