[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "attrs",
  "multiurl >= 0.3.2",
  "requests",
  "typing-extensions"
]
description = "CADS API Python client"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-api-client"
readme = "README.md"
requires-python = ">=3.8"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["cdsapi.*", "multiurl.*", "py.*"]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88
target-version = "py38"

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D",
  # flake8-future-annotations
  "FA"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_api_client"]

[tool.setuptools.package-data]
"cads_api_client" = ["py.typed"]

[tool.setuptools_scm]
write_to = "cads_api_client/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
