[metadata]
name = cads-api-client
license = Apache License 2.0
description = CADS API Python client
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =
    attrs
    multiurl
    owslib
    requests

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = True

[mypy-multiurl]
ignore_missing_imports = True

[mypy-owslib]
ignore_missing_imports = True

[mypy-py]
ignore_missing_imports = True
